--- a/frontend/src/style/Chat/Chat.css
+++ b/frontend/src/style/Chat/Chat.css
@@ -21,7 +21,7 @@
 
 .chat-name {
 	position: relative;
-	font: 20pt Roboto;
+	font: 20pt Whitney;
 	color: #fff;
 	padding-right: 10px;
 	margin-right: 10px;
